plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.modsen'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    validationVersion = '3.2.1'
    modelmapperVersion = '3.2.0'
    feignClientVersion = '4.1.0'
    springMailVersion = '3.2.2'
    kafkaVersion = '3.1.1'
    mockitoVersion = "1.10.19"
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.liquibase:liquibase-core'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'org.modelmapper', name: 'modelmapper', version:modelmapperVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version:validationVersion
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:feignClientVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version:springMailVersion
    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version:kafkaVersion
    testImplementation "org.mockito:mockito-all:${mockitoVersion}"

}

tasks.named('test') {
    useJUnitPlatform()
}